# crew-python-runner

./: .gitignore  README.md  docker_handler.py  pyproject.toml  requirements.txt
src/: crew_python_runner.py
src/crew_python_runner/: __init__.py
tests/: test_docker_controller.py
tests/python_code/: test_error.py  test_print.py
