[project]
name = 'crew_python_runner'
version = '0.2.0'
authors = [
  { name='Chris Handy', email='maximinus@gmail.com'},
]
description = 'Package to run crew.ai generated code in a docker instance'
readme = 'README.md'
requires-python = '>=3.11'
dependencies = ['docker>=7.0.0', 'crewai-tools==0.0.15']
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: Apache-2.0',
    'Operating System :: OS Independent',
]

[project.urls]
Homepage = 'https://github.com/maximinus/crew-python-runner'
Issues = 'https://github.com/maximinus/crew-python-runner/issues'

[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'
